# psychology_of_news

./: .gitignore  AGENT_HANDOFF.md  MULTI_SOURCE_PLAN.md  README.md  pyproject.toml  server.py  test_local.py
collectors/: __init__.py  reddit.py  youtube.py
docs/: AGENT_HANDOFF.md  LLM_MODEL_GUIDE.md  NARRATIVE_VIS_ARCHITECTURE.md
examples/: colab_minimal.py  colab_minimal_draymond_trade.py  daily_analysis.py
psychology_of_news/: __init__.py  analyzer.py  config.py  director.py  rater.py  scraper.py  visualizer.py
psychology_of_news/static/: index.html
psychology_of_news/static/css/: style.css
psychology_of_news/static/js/: stage.js
reddit/: server.py
reddit/data/: cluster_stats.json  points_data.json  raw_reddit.json  raw_reddit_real.json  topic_names.json
reddit/static/: index.html
scripts/: __init__.py  label_reddit_topics.py  label_youtube_topics.py  process_reddit.py  process_reddit_fast.py  process_reddit_umap.py  process_with_real_ratings.py  process_youtube_fast.py  process_youtube_umap.py  quick_reddit_test.py  test_reddit_mock.py
shared/: __init__.py  clustering.py  embeddings.py  pipeline.py  rating.py  topics.py
youtube/: server.py
youtube/data/: cluster_stats.json  points_data.json  raw_youtube.json  topic_names.json
youtube/static/: index.html
